# AIBaloot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  baloot_dataset_tester_workflow.ipynb  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
data/: .gitignore  cards.names
docs/: migration.md
src/hakim_vision/: __init__.py  cli.py  config.py  geometry.py
src/hakim_vision/synthetic/: __init__.py  assets.py  card_extraction.py  constants.py  focus.py  hull.py  pack.py  scene.py  transforms.py
tests/: test_assets.py  test_scene.py  test_smoke.py  test_synthetic.py
