[project]
name = "hakim-vision"
version = "0.1.0"
description = "Synthetic playing-card dataset generator and detector training pipeline (formerly AIBaloot). Part of the Hakim Baloot AI platform."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Osama 3alam" }]
requires-python = ">=3.12"
keywords = ["baloot", "playing-cards", "object-detection", "synthetic-data", "yolo", "computer-vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "numpy>=2.0,<3.0",
    "opencv-python>=4.10,<5.0",
    "shapely>=2.0,<3.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "typer>=0.12,<1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "hypothesis>=6.112",
    "pre-commit>=3.8",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.9",
    "nbstripout>=0.7",
]

[project.scripts]
hakim-vision = "hakim_vision.cli:app"

[project.urls]
Homepage = "https://github.com/osos3lom/AIBaloot"
Issues = "https://github.com/osos3lom/AIBaloot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hakim_vision"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["notebooks", "*.ipynb"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "N",             # pep8-naming
    "C4",            # comprehensions
    "PIE",           # misc
    "PT",            # pytest style
    "S",             # bandit (security)
    "TID",           # tidy imports
]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # asserts are fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]

[tool.ruff.lint.flake8-bugbear]
# Typer relies on function-call defaults (`typer.Option(...)` / `typer.Argument(...)`)
# to declare CLI parameters; these are the idiomatic, intended pattern, not the
# mutable-default footgun B008 targets.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["cv2.*", "shapely.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=hakim_vision",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "slow: tests that take >1s",
    "integration: integration tests requiring external resources",
]

[tool.coverage.run]
branch = true
source = ["src/hakim_vision"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

